// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea FormInputTextArea render invalid form 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  cursor: default;
  resize: vertical;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #D60000;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-1 svg {
  fill: #3B3B3B;
}

.emotion-1:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-1:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-1:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<form
    class="emotion-0"
    novalidate=""
  >
    <textarea
      aria-invalid="true"
      class="emotion-1"
      id="mock-nk-1"
      name="name"
    />
  </form>
</DocumentFragment>
`;

exports[`TextArea FormInputTextArea render valid form 1`] = `
<DocumentFragment>
  .emotion-1 {
  box-sizing: border-box;
  cursor: default;
  resize: vertical;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #007B22;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-1 svg {
  fill: #3B3B3B;
}

.emotion-1:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-1:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-1:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<form
    class="emotion-0"
    novalidate=""
  >
    <textarea
      aria-invalid="false"
      aria-required="true"
      class="emotion-1"
      id="mock-nk-1"
      name="name"
    />
  </form>
</DocumentFragment>
`;

exports[`TextArea render default 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: default;
  resize: vertical;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    name="text-area"
  />
</DocumentFragment>
`;

exports[`TextArea render resize: both 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: default;
  resize: both;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    name="textArea"
  />
</DocumentFragment>
`;

exports[`TextArea render resize: horizontal 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: default;
  resize: horizontal;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    name="textArea"
  />
</DocumentFragment>
`;

exports[`TextArea render resize: none 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: default;
  resize: none;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    name="textArea"
  />
</DocumentFragment>
`;

exports[`TextArea render resize: vertical 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: default;
  resize: vertical;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    name="textArea"
  />
</DocumentFragment>
`;

exports[`TextArea render size: large 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: default;
  resize: vertical;
  width: 100%;
  height: 120px;
  min-height: 64px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 16px;
  padding-inline-start: 16px;
  -webkit-padding-end: 16px;
  padding-inline-end: 16px;
  padding-block-start: 16px;
  padding-block-end: 16px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    name="textArea"
  />
</DocumentFragment>
`;

exports[`TextArea render size: medium 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: default;
  resize: vertical;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    name="textArea"
  />
</DocumentFragment>
`;

exports[`TextArea render size: small 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: default;
  resize: vertical;
  width: 100%;
  height: 80px;
  min-height: 40px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 8px;
  padding-inline-start: 8px;
  -webkit-padding-end: 8px;
  padding-inline-end: 8px;
  padding-block-start: 8px;
  padding-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:valid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:invalid:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    name="textArea"
  />
</DocumentFragment>
`;

exports[`TextArea render state: disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: not-allowed;
  resize: vertical;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #E2E2E2;
  border-width: 1px;
  border-radius: 8px;
  color: #ABABAB;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    disabled=""
    name="textArea"
  />
</DocumentFragment>
`;

exports[`TextArea render state: invalid 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: default;
  resize: vertical;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #D60000;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    name="textArea"
  />
</DocumentFragment>
`;

exports[`TextArea render state: valid 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  cursor: default;
  resize: vertical;
  width: 100%;
  height: 120px;
  min-height: 48px;
  background-color: transparent;
  border-style: solid;
  border-color: #007B22;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-block-end: 8px;
  -webkit-padding-start: 12px;
  padding-inline-start: 12px;
  -webkit-padding-end: 12px;
  padding-inline-end: 12px;
  padding-block-start: 12px;
  padding-block-end: 12px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-0::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-0:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-0::placeholder {
  color: #6A6A6A;
}

<textarea
    class="emotion-0"
    name="textArea"
  />
</DocumentFragment>
`;
